Some fixes and refactor

--- a/WebApiTest/appsettings.json
+++ b/WebApiTest/appsettings.json
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
-  }
+  },
+  "ConnectionStrings": {
+      "CardholdersStore": "Server=(localdb)\\mssqllocaldb;Database=cardholdersstore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
 }
